# Scalable-MPMC-Queue-cpp

./: .clang-format  .gitattributes  .gitignore  .gitmessage  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md  benchmark_lscq_test.json  benchmark_results.json  test_cas2_status.cpp  test_lscq_simple.cpp  tsan.supp
.claude/specs/cross-platform-optimization/: dev-plan.md
.claude/specs/phase-1-infrastructure-setup/: dev-plan.md
.claude/specs/phase-2-ncq-implementation/: dev-plan.md  parallel-tasks.txt
.claude/specs/phase-4-scqp-implementation/: dev-plan.md
.claude/specs/phase-5-lscq-implementation/: dev-plan.md
.claude/specs/phase7-release-performance/: dev-plan.md
.claude/specs/phase8-documentation/: dev-plan.md
.claude/specs/phase9-git-management/: dev-plan.md
.claude/specs/scq-core-implementation/: dev-plan.md
.github/workflows/: README.md  ci.yml
.serena/: project.yml
benchmarks/: CMakeLists.txt  _tmp_ncq.json  all_20260118_202108.json  all_20260118_204319.json  benchmark_cas2.cpp  benchmark_components.cpp  benchmark_empty.cpp  benchmark_lscq.cpp  benchmark_lscq_simple.cpp  benchmark_main.cpp  benchmark_memory.cpp  benchmark_mixed.cpp  benchmark_mutex_queue.cpp  benchmark_ncq.cpp  benchmark_object_pool_map.cpp  benchmark_object_pool_tls.cpp  benchmark_object_pool_tls_v2.cpp  benchmark_pair.cpp  benchmark_scq.cpp  benchmark_scqp.cpp  benchmark_smoke.cpp  benchmark_stress.cpp  benchmark_utils.hpp  compare_gap.py  md_20260118_205910.json  md_20260118_211128.json  md_20260118_212628.json  md_20260118_212920.json  me_20260118_205849.json  me_20260118_212642.json  me_20260118_213457.json  pair_20260118_194811.json  pair_20260118_201304.json  pair_20260118_201851.json  pair_20260118_202013.json  test_scqp_pair.json
cmake/toolchains/: aarch64-linux-gnu.cmake
docs/: 00-本地开发环境配置.md  03-性能验证方案.md  ObjectPool-Optimization-Plan.md  ObjectPool-Optimization-Review.md  ObjectPool-Phase1-Summary.md  ObjectPool-Phase2-Summary.md  ObjectPool-Testing-Plan.md  Phase7-交接文档.md  Troubleshooting.md  Tutorial.md  architecture.md  benchmark-testing-guide.md  usage.md
docs/archive/: 01-技术实现思路.md  02-分段开发计划.md  Phase1-交接文档.md  Phase2-交接文档.md  Phase3-交接文档.md  Phase4-交接文档.md  Phase4-完成报告.md  Phase5-交接文档.md  Phase5-完成总结.md  Phase6-完成报告.md  Phase8-交接文档.md  task_3_2_benchmark_completion.md
docs/starter-prompts/: Phase1-基础设施搭建.md  Phase2-NCQ实现与验证.md  Phase3-SCQ核心实现.md  Phase4-SCQP双字宽CAS扩展.md  Phase5-LSCQ无界队列.md  Phase6-优化与多平台支持.md  Phase7-Release编译与性能对比测试.md  Phase8-文档补全和使用说明.md  Phase9-Git仓库管理与项目发布.md  README.md
examples/: CMakeLists.txt  benchmark_custom.cpp  benchmark_demo.cpp  producer_consumer.cpp  simple_queue.cpp  simple_usage.cpp  task_queue.cpp
include/lscq/: cas2.hpp  config.hpp  ebr.hpp  lscq.hpp  msqueue.hpp  mutex_queue.hpp  ncq.hpp  object_pool.hpp  object_pool_map.hpp  object_pool_tls.hpp  object_pool_tls_v2.hpp  scq.hpp  scqp.hpp
include/lscq/detail/: atomic_or.hpp  atomic_ptr.hpp  bit.hpp  likely.hpp  ncq_impl.hpp  numa_utils.hpp  object_pool_core.hpp  object_pool_shard.hpp  platform.hpp
scripts/: analyze_benchmarks.py  environment.yml  run_benchmarks.py  run_benchmarks.sh
src/: README.md  cas2.cpp  ebr.cpp  lscq.cpp  msqueue.cpp  ncq.cpp  scq.cpp  scqp.cpp
tests/: CMakeLists.txt  debug_lscq_pair.cpp  test_mutex_queue.cpp
tests/analysis/: test_lscq_usage_pattern.cpp
tests/stress/: test_object_pool_stress.cpp
tests/unit/: test_cas2.cpp  test_ebr.cpp  test_lscq.cpp  test_msqueue.cpp  test_ncq.cpp  test_object_pool.cpp  test_object_pool_core.cpp  test_object_pool_map.cpp  test_object_pool_suite.hpp  test_object_pool_tls.cpp  test_object_pool_tls_v2.cpp  test_scq.cpp  test_scqp.cpp  test_scqp_perf.cpp  test_smoke.cpp
